[project]
name = "example_package_8086X"
version = "0.0.1"
authors = [
  { name="HYU X8086", email="luoxiaofan8086@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/8086X/sampleproject"
Issues = "https://github.com/8086X/sampleproject/issues"